...
                android:textColor="@color/chip_revert_color_activated"
                app:chipBackgroundColor="@color/chip_background_flood"
                app:chipStrokeColor="@color/chip_stroke_color_flood"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipgreat_flood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:tag="8"
                android:transitionName="transition_chip_8"
                android:text="@string/great_flood"
...

            <com.google.android.material.chip.Chip
                android:id="@+id/chipwhirlwind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:tag="14"
                android:transitionName="transition_chip_14"
                android:text="@string/whirlwind"
                android:textColor="@color/chip_revert_color_activated"
                app:chipBackgroundColor="@color/chip_background_weather"
                app:chipStrokeColor="@color/chip_stroke_color_weather"
                app:chipStrokeWidth="2dp" />
...
                android:textColor="@color/chip_revert_color_activated"
                app:chipBackgroundColor="@color/chip_background_flame"
                app:chipStrokeColor="@color/chip_stroke_color_flame"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipknights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:tag="21"
                android:transitionName="transition_chip_21"
                android:text="@string/celestial_knights"
...
                android:textColor="@color/chip_revert_color_activated"
                app:chipBackgroundColor="@color/chip_background_army"
                app:chipStrokeColor="@color/chip_stroke_color_army"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chiprangers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:tag="25"
                android:transitionName="transition_chip_25"
                android:text="@string/rangers"
...
                android:textColor="@color/chip_revert_color_activated"
                app:chipBackgroundColor="@color/chip_background_wild"
                app:chipStrokeColor="@color/chip_stroke_color_wild"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipWizard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:tag="WIZARD"
                android:text="@string/suit_wizard"
                android:textColor="@color/chip_revert_color_activated"
...
                app:chipStrokeWidth="2dp" />

        </com.google.android.material.chip.ChipGroup>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addCardsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal|center_vertical"
...
