...
    <string name="suit_wizard">Wizard</string>
    <string name="suit_building">Building</string>
    <string name="suit_outsider">Outsider</string>
    <string name="suit_undead">Undead</string>
    <string name="suit_cursed_item">Cursed item</string>
    <!-- Card names -->
    <string name="rangers">Rangers</string>
    <string name="elven_archers">Elven Archers</string>
    <string name="dwarvish_infantry">Dwarvish Infantry</string>
    <string name="light_cavalry">Light Cavalry</string>
    <string name="celestial_knights">Knights</string>
    <string name="protection_rune">Protection Rune</string>
    <string name="world_tree">World Tree</string>
...
