<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
            android:layout_height="wrap_content" android:id="@+id/playerNameField" android:layout_weight="7"
            android:textSize="18sp" android:textStyle="bold"
    />
    <TextView
            android:textSize="18sp" android:textStyle="bold"
            android:layout_width="90dp"
        android:textColor="?android:attr/textColorPrimary"
            android:layout_height="wrap_content" android:id="@+id/scoreLabel"
            android:gravity="center_horizontal|center_vertical"/>
    <Button
            android:text="@string/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/editButton"/>
</LinearLayout>
