<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/playerNameEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playerNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_name_label"
            android:tag="playerNameEditText"
            android:textColor="?android:attr/textColorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
